Removed debugging console.logs and fixed a minor bug in getTowns()
Fixed minor bug in getTowns() when clicked multiple times on
country all towns were added once again in menu.

refactored the code a little bit and did some style on townView div

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div id="visitedNavlink"></div>
         </nav>
     </div>
-    <div id="townView"></div>
+    <div id="townView" class="jumbotron"> <h1>Välkommen</h1><p>Välj ett land och en stad i menyn för mer info</p></div>
     <script src="script.js"></script>
 </body>
 
